[project]
name = "jazztunes"
version = "1.0.0"
description = "A jazz repertoire management app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=6.0",
    "django-allauth>=65.7.0",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.10",
    "python-decouple>=3.8",
    "sendgrid>=6.11.0",
    "sentry-sdk>=2.27.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
    "furo>=2025.12.19",
    "playwright>=1.52.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "pytest-playwright>=0.7.0",
    "pytest-repeat>=0.9.4",
    "ruff>=0.15.4",
    "sphinx>=9.1.0",
    "tox>=4.26.0",
]
